--- a/paper/Permutations.tex
+++ b/paper/Permutations.tex
@@ -577,18 +577,18 @@ molte altre proprietà non descritte, controllare quelle che servono davvero.}
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{≃}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∋}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊳}}\AgdaSpace{}%
 \AgdaBound{Γ′}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{∃[}\AgdaSpace{}%
 \AgdaBound{Δ′}\AgdaSpace{}%
 \AgdaFunction{]}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{Δ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{≃}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∋}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊳}}\AgdaSpace{}%
 \AgdaBound{Δ′}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{×}}\AgdaSpace{}%
 \AgdaBound{Γ′}\AgdaSpace{}%
