--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -275,7 +275,7 @@
 \newcommand{\rtred}{\tred^?}
 
 \newcommand{\Splitting}[3]{#1 \simeq #2 + #3}
-\newcommand{\SimpleSplitting}[3]{#1 \simeq #2, #3}
+\newcommand{\SimpleSplitting}[3]{#1 \ni #2 \vartriangleright #3}
 
 %%%%%%%%%%%%%%%%%
 %%% FUNCTIONS %%%
