--- a/paper/main.tex
+++ b/paper/main.tex
@@ -52,6 +52,8 @@
 \newunicodechar{ℕ}{\ensuremath{\mathbb{N}}}
 \newunicodechar{≫}{\ensuremath\gg}
 \newunicodechar{≪}{\ensuremath\ll}
+\newunicodechar{∋}{\ensuremath\ni}
+\newunicodechar{⊳}{\ensuremath\vartriangleright}
 % \newunicodechar{•}{\bullet}
 
 %%%%%=============================================================================%%%%
